# hydrofoil-actuation-system

./: README.md
ArduinoCode/OscillationCaseExample1/: OscillationCaseExample1.ino
ArduinoCode/StaticCodeNeedsFixing/: StaticCodeNeedsFixing.ino
backup/: scada_full.py  scada_web.py
python/: README.md  experiment_log.csv  log copy.csv  log.csv  pyproject.toml  scada_data.csv  setup.py  sine_dataset.csv  sine_log.csv  test_controller.py
python/ECU/: __init__.py  hardware.py  hardware_interface.py  scada.py  signals.py  sim_driver.py
python/ECU/controller/: controller.py  historian.py
python/ECU/device/: arduino.py  driver.py  hardware_interface.py  sim_driver.py
python/ECU/protocol/: protocol.py  raw_byte.py
python/ECU/transport/: serial.py  tcp.py  transport.py
python/tasks/: lightbulb.py  lightbulb_dimmer.py  motorlinear.py  pingcontroller.py  run_sine.py  scada_query_live.py  verifyserial.py
python/web_dashboard/: app.py
python/web_dashboard/templates/: dashboard.html
